--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
+html{
+    height: 100%;
+}
 body{
     font-family: 'Noto Serif', serif;
     margin: 0%;
 }
-
 h1{
     font-size: 60px;
     margin-left: 50px;
     margin-top: 200px;
 }
-
-.section1h1{
+.highlights{
     color: orangered;
 }
-
 .section1p {
 font-size: 20px;
 text-align: justify;
 margin-bottom: 5%;
 margin-left: 50px;
 }
-
 .button1{
     text-decoration: none;
     color: white;
@@ -29,17 +28,17 @@ margin-left: 50px;
     font-size: 16px;
     margin-left: 50px;
    }
-
 .topbanner{
     background-image: url(images/7.png);
     background-repeat: no-repeat;
     background-size: cover;
+   
 }
-
 .section1box{
     width: 50%;
     margin: 50px;
     padding-left: 5%;
+    color: gray;
     }
 .section1box img{
     width: 80%;
@@ -47,3 +46,79 @@ margin-left: 50px;
 .flexible-container {
     display: flex;
     }
+.follower-bar{
+    margin: 5% 30% ;
+    border-radius: 10px;
+ text-align: center;
+ background-image: linear-gradient(rgba(255, 96, 79, 0.726), pink);
+    box-shadow: 2px 2px 10px gray;
+}
+.followerbar-items{
+    padding: 50px;
+    font-size: 20px;
+}
+.midbanner{
+    background-image: url(images/section2cover.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%
+    
+}
+.section2box{
+    color: gray;
+    width: 30%;
+    margin-right: 100px;
+    margin-left: 150px;
+    margin-bottom: 0%;
+margin-top: 20px;
+    padding-left: 5%;
+}
+.section2p{
+    color: black;
+    font-size: 20px;
+text-align: justify;
+margin-bottom: 5%;
+margin-left: 50px;
+}
+.section2box img {
+    width:60%;
+    margin-top: 40%;
+    padding-bottom: 0%;
+    
+}
+.button2{
+    text-decoration: none;
+    color: white;
+    padding: 10px 20px;
+    background-image: linear-gradient(rgb(255, 129, 129), violet);
+    border-radius: 50px;
+    font-size: 16px;
+    margin-left: 50px;
+}
+
+
+.section3heading{
+text-align: center;
+padding-top: 0%;
+}
+.section3heading h1 {
+    color: gray;
+}
+
+.card{
+    width:30%;
+    margin:5% 5%;
+    padding: 10px;
+    box-shadow: 2px 2px 10px gray;
+    border-radius: 20px;
+}
+.card-image img {width: 100%;}
+    
+.title{
+    text-align: center;
+}
+footer{
+    text-align: center;
+    background-color: rgb(29, 7, 7);
+    color: gray;
+    padding: 5%;
+}
